APS-173: Changes related to restricting product solution items and validations

--- a/config/clecotools/default/field.field.paragraph.product_solutions_item.field_product_solution_image.yml
+++ b/config/clecotools/default/field.field.paragraph.product_solutions_item.field_product_solution_image.yml
@@ -12,7 +12,7 @@ entity_type: paragraph
 bundle: product_solutions_item
 label: 'Product Solution Image'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
