--- a/config/clecotools/default/field.field.paragraph.product_solutions_item.field_solution.yml
+++ b/config/clecotools/default/field.field.paragraph.product_solutions_item.field_solution.yml
@@ -11,7 +11,7 @@ entity_type: paragraph
 bundle: product_solutions_item
 label: Solution
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
