--- a/config/clecotools/default/core.entity_view_display.node.case_studies.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.case_studies.default.yml
@@ -22,43 +22,44 @@ mode: default
 content:
   field_case_study_client_summary:
     type: basic_string
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 111
     region: content
   field_case_study_content:
     type: text_default
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 110
     region: content
   field_case_study_summary:
     type: basic_string
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 109
     region: content
   field_case_study_summary_top:
     type: basic_string
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 107
     region: content
   field_image:
-    type: entity_reference_label
-    label: above
+    type: entity_reference_entity_view
+    label: hidden
     settings:
+      view_mode: default
       link: true
     third_party_settings: {  }
     weight: 102
     region: content
   field_media:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
@@ -66,7 +67,7 @@ content:
     region: content
   field_read_time:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -74,7 +75,7 @@ content:
     region: content
   field_type_of_case_study:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
