--- a/config/clecotools/default/user.role.anonymous.yml
+++ b/config/clecotools/default/user.role.anonymous.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - taxonomy.vocabulary.case_study
     - taxonomy.vocabulary.continent
     - taxonomy.vocabulary.department
     - taxonomy.vocabulary.distributor_level
@@ -78,6 +79,7 @@ permissions:
   - 'view paragraph content testimonials_block'
   - 'view paragraph content testimonials_section'
   - 'view paragraph content video_bundle'
+  - 'view term names in case_study'
   - 'view term names in continent'
   - 'view term names in department'
   - 'view term names in distributor_level'
