--- a/config/clecotools/default/field.storage.node.field_case_study_summary_top.yml
+++ b/config/clecotools/default/field.storage.node.field_case_study_summary_top.yml
@@ -1,16 +1,16 @@
-uuid: 307371a1-e34c-415a-b6de-f75b0feea0e2
+uuid: 7f39184a-0f67-4b9b-a66b-ca95ef43fb53
 langcode: en
 status: true
 dependencies:
   module:
     - node
+    - text
 id: node.field_case_study_summary_top
 field_name: field_case_study_summary_top
 entity_type: node
-type: string_long
-settings:
-  case_sensitive: false
-module: core
+type: text_long
+settings: {  }
+module: text
 locked: false
 cardinality: 1
 translatable: true
