--- a/config/clecotools/default/core.entity_view_display.node.case_studies.default.yml
+++ b/config/clecotools/default/core.entity_view_display.node.case_studies.default.yml
@@ -25,28 +25,28 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 111
+    weight: 7
     region: content
   field_case_study_content:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 110
+    weight: 6
     region: content
   field_case_study_summary:
     type: basic_string
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 109
+    weight: 5
     region: content
   field_case_study_summary_top:
-    type: basic_string
+    type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 107
+    weight: 1
     region: content
   field_image:
     type: entity_reference_entity_view
@@ -55,7 +55,7 @@ content:
       view_mode: default
       link: true
     third_party_settings: {  }
-    weight: 102
+    weight: 2
     region: content
   field_media:
     type: entity_reference_label
@@ -63,7 +63,7 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 112
+    weight: 8
     region: content
   field_read_time:
     type: string
@@ -71,7 +71,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 108
+    weight: 4
     region: content
   field_type_of_case_study:
     type: entity_reference_label
@@ -79,12 +79,12 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 104
+    weight: 3
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   langcode: true
