--- a/config/apex-tools/default/block.block.findalocalrepnorthamericaen.yml
+++ b/config/apex-tools/default/block.block.findalocalrepnorthamericaen.yml
@@ -33,4 +33,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/industry-solutions/*\r\n/tools/tool-catalog/*"
+    pages: "/industry-solutions/*\r\n/products/product-catalog/*"
