APEX-000: Added breadcrumb chages DE language

--- a/config/apex-tools/default/easy_breadcrumb.settings.yml
+++ b/config/apex-tools/default/easy_breadcrumb.settings.yml
@@ -3,7 +3,7 @@ _core:
 applies_admin_routes: false
 include_invalid_paths: false
 excluded_paths: ''
-replaced_titles: "Products::Tools\r\nProduct Catalog::Tool Catalog"
+replaced_titles: "Products::Tools\r\nProduct Catalog::Tool Catalog\r\nProdukte::Werkzeuge\r\nProduktkatalog::Werkzeugkatalog"
 custom_paths: ''
 include_home_segment: true
 alternative_title_field: ''
