APEX-330: Hubspot js

--- a/docroot/themes/custom/apex_tools/apex_tools.libraries.yml
+++ b/docroot/themes/custom/apex_tools/apex_tools.libraries.yml
@@ -26,5 +26,6 @@ hubspot:
   js:
     //js.hsforms.net/forms/embed/v2.js: {}
   dependencies:
-    - core/drupal
     - core/jquery
+    - core/jquery.once
+    - core/drupal
