--- a/config/apex-tools/default/core.entity_view_display.quotation.quotation.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.quotation.quotation.default.yml
@@ -4,13 +4,26 @@ status: true
 dependencies:
   config:
     - field.field.quotation.quotation.field_are_you_requesting_an_item
+    - field.field.quotation.quotation.field_comments
     - field.field.quotation.quotation.field_country
+    - field.field.quotation.quotation.field_custom_drive_tool_type
+    - field.field.quotation.quotation.field_describe_changes
+    - field.field.quotation.quotation.field_enter_existing_apex_part
+    - field.field.quotation.quotation.field_if_yes_please_enter_part
+    - field.field.quotation.quotation.field_reactivation_request
     - field.field.quotation.quotation.field_state
+    - field.field.quotation.quotation.field_upload
   module:
     - address
     - apex_tools_custom_quotation
+    - entity_print
+    - entity_reference_revisions
+    - geocoder_field
     - options
     - user
+third_party_settings:
+  entity_print:
+    pdf_label: 'Download Results'
 id: quotation.quotation.default
 targetEntityType: quotation
 bundle: quotation
@@ -41,12 +54,17 @@ content:
     third_party_settings: {  }
     weight: -5
     region: content
+  entity_print_view_pdf:
+    settings: {  }
+    third_party_settings: {  }
+    weight: 0
+    region: content
   field_account_number:
-    type: number_integer
+    type: geocoder_geocode_formatter
     label: above
     settings:
-      thousand_separator: ''
-      prefix_suffix: true
+      dumper: wkt
+      providers: {  }
     third_party_settings: {  }
     weight: -5
     region: content
@@ -81,12 +99,56 @@ content:
     third_party_settings: {  }
     weight: -5
     region: content
+  field_comments:
+    type: basic_string
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 31
+    region: content
   field_country:
     type: address_country_default
     label: above
     settings: {  }
     third_party_settings: {  }
     weight: 21
+    region: content
+  field_custom_drive_tool_type:
+    type: list_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 24
+    region: content
+  field_describe_changes:
+    type: basic_string
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 32
+    region: content
+  field_enter_existing_apex_part:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 26
+    region: content
+  field_if_yes_please_enter_part:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 30
+    region: content
+  field_reactivation_request:
+    type: list_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 25
     region: content
   field_state:
     type: list_default
@@ -102,6 +164,15 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_upload:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 29
     region: content
   field_zip_code:
     type: string
@@ -128,11 +199,11 @@ content:
     weight: -5
     region: content
   phone_number:
-    type: number_integer
+    type: geocoder_geocode_formatter
     label: above
     settings:
-      thousand_separator: ''
-      prefix_suffix: true
+      dumper: wkt
+      providers: {  }
     third_party_settings: {  }
     weight: -5
     region: content
@@ -155,7 +226,6 @@ content:
     region: content
 hidden:
   entity_print_view_epub: true
-  entity_print_view_pdf: true
   entity_print_view_word_docx: true
   langcode: true
   search_api_excerpt: true
