--- a/config/apex-tools/default/field.field.quotation.quotation.field_custom_drive_tool_type.yml
+++ b/config/apex-tools/default/field.field.quotation.quotation.field_custom_drive_tool_type.yml
@@ -1,17 +1,17 @@
-uuid: 9aef7cc5-40db-47bb-b6b5-a6366855a9c3
+uuid: 79a72bec-4a55-49ac-9113-30b5b9f27418
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.quotation.field_state
+    - field.storage.quotation.field_custom_drive_tool_type
   module:
     - apex_tools_custom_quotation
     - options
-id: quotation.quotation.field_state
-field_name: field_state
+id: quotation.quotation.field_custom_drive_tool_type
+field_name: field_custom_drive_tool_type
 entity_type: quotation
 bundle: quotation
-label: State
+label: 'Please select the type of Custom Drive Tool you are seeking:'
 description: ''
 required: true
 translatable: false
