--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -33,7 +33,9 @@ permissions:
   - 'access content'
   - 'access site-wide contact form'
   - 'access taxonomy overview'
+  - 'create paragraph content media_file'
   - 'create quotation'
+  - 'delete paragraph content media_file'
   - 'search content'
   - 'select terms in continent'
   - 'select terms in department'
@@ -71,6 +73,7 @@ permissions:
   - 'view paragraph content iframe'
   - 'view paragraph content intro'
   - 'view paragraph content media_block'
+  - 'view paragraph content media_file'
   - 'view paragraph content media_image'
   - 'view paragraph content message_block'
   - 'view paragraph content product_categories'
