--- a/composer.json
+++ b/composer.json
@@ -377,6 +377,9 @@
             },
             "drupal/fixed_block_content": {
                 "Access Issue for anonymous users": "https://www.drupal.org/files/issues/2022-11-11/3272253-fixed_blocks_not_visible_to_guest_users-5.patch"
+            },
+            "drupal/conditional_fields": {
+                "Remove validation for hidden fields": "https://www.drupal.org/files/issues/2023-05-05/3344587-required_fields_not_visible-15.patch"
             }
 
         },
