--- a/config/apex-tools/default/field.field.quotation.quotation.field_reactivation_request.yml
+++ b/config/apex-tools/default/field.field.quotation.quotation.field_reactivation_request.yml
@@ -1,19 +1,19 @@
-uuid: 9aef7cc5-40db-47bb-b6b5-a6366855a9c3
+uuid: 41724d1b-472e-4aa9-90e7-e7445f16908c
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.quotation.field_state
+    - field.storage.quotation.field_reactivation_request
   module:
     - apex_tools_custom_quotation
     - options
-id: quotation.quotation.field_state
-field_name: field_state
+id: quotation.quotation.field_reactivation_request
+field_name: field_reactivation_request
 entity_type: quotation
 bundle: quotation
-label: State
+label: 'Are you requesting the reactivation of a part?'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
