--- a/config/apex-tools/default/user.role.authenticated.yml
+++ b/config/apex-tools/default/user.role.authenticated.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - filter.format.basic_html
   module:
+    - apex_tools_custom_quotation
     - comment
     - contact
     - filter
     - media
+    - paragraphs_type_permissions
     - search
     - shortcut
 _core:
@@ -21,8 +23,13 @@ permissions:
   - 'access comments'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'create paragraph content media_file'
+  - 'create quotation'
+  - 'delete paragraph content media_file'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
   - 'use text format basic_html'
   - 'view media'
+  - 'view paragraph content media_file'
+  - 'view quotation'
