--- a/config/clecotools/default/core.entity_form_display.node.case_studies.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.case_studies.default.yml
@@ -3,17 +3,18 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.case_studies.field_attachments
     - field.field.node.case_studies.field_case_study_client_summary
     - field.field.node.case_studies.field_case_study_content
     - field.field.node.case_studies.field_case_study_summary
     - field.field.node.case_studies.field_case_study_summary_top
     - field.field.node.case_studies.field_image
-    - field.field.node.case_studies.field_media
     - field.field.node.case_studies.field_read_time
     - field.field.node.case_studies.field_type_of_case_study
     - node.type.case_studies
   module:
     - content_moderation
+    - file
     - media_library
     - path
     - text
@@ -24,9 +25,16 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
+    third_party_settings: {  }
+  field_attachments:
+    type: file_generic
+    weight: 9
+    region: content
+    settings:
+      progress_indicator: throbber
     third_party_settings: {  }
   field_case_study_client_summary:
     type: string_textarea
@@ -67,13 +75,6 @@ content:
     settings:
       media_types: {  }
     third_party_settings: {  }
-  field_media:
-    type: media_library_widget
-    weight: 8
-    region: content
-    settings:
-      media_types: {  }
-    third_party_settings: {  }
   field_read_time:
     type: string_textfield
     weight: 4
@@ -90,40 +91,40 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 9
+    weight: 10
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 12
+    weight: 13
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 17
+    weight: 18
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 13
+    weight: 14
     region: content
     settings:
       display_label: true
@@ -138,7 +139,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 11
     region: content
     settings:
       match_operator: CONTAINS
@@ -147,7 +148,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 15
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
