--- a/config/clecotools/default/core.entity_view_display.node.case_studies.teaser.yml
+++ b/config/clecotools/default/core.entity_view_display.node.case_studies.teaser.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.case_studies.field_attachments
     - field.field.node.case_studies.field_case_study_client_summary
     - field.field.node.case_studies.field_case_study_content
     - field.field.node.case_studies.field_case_study_summary
     - field.field.node.case_studies.field_case_study_summary_top
     - field.field.node.case_studies.field_image
-    - field.field.node.case_studies.field_media
     - field.field.node.case_studies.field_read_time
     - field.field.node.case_studies.field_type_of_case_study
     - node.type.case_studies
@@ -26,12 +26,12 @@ content:
     weight: 100
     region: content
 hidden:
+  field_attachments: true
   field_case_study_client_summary: true
   field_case_study_content: true
   field_case_study_summary: true
   field_case_study_summary_top: true
   field_image: true
-  field_media: true
   field_read_time: true
   field_type_of_case_study: true
   langcode: true
