feature/APEX-652-AT: added required modules

--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
         "drupal/core-recommended": "9.5.9",
         "drupal/core-vendor-hardening": "^9.4.7",
         "drupal/current_page_crumb": "^1.2",
+        "drupal/default_paragraphs": "^2.0@RC",
         "drupal/devel": "^4.1",
         "drupal/devel_entity_updates": "^3.0",
         "drupal/devel_php": "^1.0",
@@ -132,6 +133,7 @@
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_tools": "^5.0",
         "drupal/module_filter": "^3.2",
+        "drupal/modules_weight": "^1.9",
         "drupal/node_view_permissions": "^1.5",
         "drupal/paragraphs": "^1.x-dev",
         "drupal/paragraphs_ee": "1.x-dev@dev",
@@ -140,6 +142,7 @@
         "drupal/pathauto": "^1.11",
         "drupal/pdfpreview": "^1.0",
         "drupal/permissions_filter": "^1.3",
+        "drupal/physical": "^1.3",
         "drupal/purge": "^3.4",
         "drupal/purge_purger_http": "^1.0",
         "drupal/quick_node_clone": "^1.14",
@@ -151,6 +154,7 @@
         "drupal/schema_metatag": "^2.1",
         "drupal/search_api": "^1.28",
         "drupal/search_api_solr": "4.2.8",
+        "drupal/select_or_other": "^4.1",
         "drupal/selective_better_exposed_filters": "^3.0@beta",
         "drupal/sfweb2lead_webform": "^5.2",
         "drupal/shield": "^1.6",
