--- a/composer.json
+++ b/composer.json
@@ -122,6 +122,7 @@
         "drupal/link_class": "^1.0",
         "drupal/linkit": "^5.0@beta",
         "drupal/login_emailusername": "^1.1",
+        "drupal/markup": "^2.0@beta",
         "drupal/media_entity_browser": "^2.0@alpha",
         "drupal/media_responsive_thumbnail": "^1.0",
         "drupal/media_video_micromodal": "^1.0.8",
