APEX-652: Responsive for Step 1 and 2

--- a/composer.json
+++ b/composer.json
@@ -173,6 +173,7 @@
         "drupal/telephone_validation": "^2.1",
         "drupal/theme_filter": "^1.0",
         "drupal/token": "^1.11",
+        "drupal/triples_field": "^1.0",
         "drupal/twig_tweak": "^3.2",
         "drupal/ultimate_cron": "^2.0@alpha",
         "drupal/upgrade_status": "^3.18",
@@ -384,7 +385,8 @@
                 "Access Issue for anonymous users": "https://www.drupal.org/files/issues/2022-11-11/3272253-fixed_blocks_not_visible_to_guest_users-5.patch"
             },
             "drupal/conditional_fields": {
-                "Remove validation for hidden fields": "https://www.drupal.org/files/issues/2023-05-05/3344587-required_fields_not_visible-15.patch"
+                "Remove validation for hidden fields": "https://www.drupal.org/files/issues/2023-05-05/3344587-required_fields_not_visible-15.patch",
+                "Conditional field is not working for paragraph": "https://www.drupal.org/files/issues/2023-06-15/conditional-fields-controlled-fields-inside-paragraphs-2902164-134.patch"
             }
 
         },
