--- a/config/apextoolgroup/default/field.field.node.policies_registration.field_display_title.yml
+++ b/config/apextoolgroup/default/field.field.node.policies_registration.field_display_title.yml
@@ -1,15 +1,15 @@
-uuid: e2d23665-92a2-40ad-a080-caea856e46a3
+uuid: 4e50915a-7375-4162-a91a-62d395db2135
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_download_policy_label
+    - field.storage.node.field_display_title
     - node.type.policies_registration
-id: node.policies_registration.field_download_policy_label
-field_name: field_download_policy_label
+id: node.policies_registration.field_display_title
+field_name: field_display_title
 entity_type: node
 bundle: policies_registration
-label: 'Download Policy Label'
+label: 'Display Title'
 description: ''
 required: false
 translatable: false
