--- a/config/apextoolgroup/default/field.storage.paragraph.field_downloadpolicy_description.yml
+++ b/config/apextoolgroup/default/field.storage.paragraph.field_downloadpolicy_description.yml
@@ -1,13 +1,13 @@
-uuid: 92176811-460a-4c26-9076-ca2573620e39
+uuid: b4e3c08e-b9b5-40fe-8d93-1ac866d95127
 langcode: en
 status: true
 dependencies:
   module:
-    - node
+    - paragraphs
     - text
-id: node.field_download_policy_desc
-field_name: field_download_policy_desc
-entity_type: node
+id: paragraph.field_downloadpolicy_description
+field_name: field_downloadpolicy_description
+entity_type: paragraph
 type: text_long
 settings: {  }
 module: text
