--- a/config/apextoolgroup/default/field.storage.paragraph.field_downloadpolicy_label.yml
+++ b/config/apextoolgroup/default/field.storage.paragraph.field_downloadpolicy_label.yml
@@ -1,12 +1,12 @@
-uuid: 28fa5dc8-d8c8-4407-b58d-e43ebeb72c60
+uuid: d35fca84-b387-499e-a1dc-c6c8e3c39de5
 langcode: en
 status: true
 dependencies:
   module:
-    - node
-id: node.field_download_policy_label
-field_name: field_download_policy_label
-entity_type: node
+    - paragraphs
+id: paragraph.field_downloadpolicy_label
+field_name: field_downloadpolicy_label
+entity_type: paragraph
 type: string
 settings:
   max_length: 255
