--- a/config/apextoolgroup/default/field.storage.paragraph.field_file_label.yml
+++ b/config/apextoolgroup/default/field.storage.paragraph.field_file_label.yml
@@ -1,12 +1,12 @@
-uuid: 5016032c-133b-413e-8aa7-9712ffaf7ed9
+uuid: 18ad3691-cc34-4fce-858b-c2c4976b4efe
 langcode: en
 status: true
 dependencies:
   module:
-    - node
-id: node.field_download_policy_file_label
-field_name: field_download_policy_file_label
-entity_type: node
+    - paragraphs
+id: paragraph.field_file_label
+field_name: field_file_label
+entity_type: paragraph
 type: string
 settings:
   max_length: 255
