--- a/config/apextoolgroup/default/core.entity_form_display.node.policies_registration.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.node.policies_registration.default.yml
@@ -3,37 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.policies_registration.field_download_policy_desc
-    - field.field.node.policies_registration.field_download_policy_file_label
-    - field.field.node.policies_registration.field_download_policy_file_pdf_m
-    - field.field.node.policies_registration.field_download_policy_label
+    - field.field.node.policies_registration.field_display_title
+    - field.field.node.policies_registration.field_downloadpolicy_component
     - field.field.node.policies_registration.field_policies_registration_webf
     - node.type.policies_registration
   module:
-    - field_group
-    - file
+    - paragraphs
     - path
-    - text
     - webform
-third_party_settings:
-  field_group:
-    group_download_policy_component:
-      children:
-        - field_download_policy_label
-        - field_download_policy_desc
-        - field_download_policy_file_pdf_m
-        - field_download_policy_file_label
-      label: 'Download Policy Component'
-      region: content
-      parent_name: ''
-      weight: 9
-      format_type: fieldset
-      format_settings:
-        classes: ''
-        show_empty_fields: false
-        id: ''
-        description: ''
-        required_fields: true
 id: node.policies_registration.default
 targetEntityType: node
 bundle: policies_registration
@@ -45,28 +22,13 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_download_policy_desc:
-    type: text_textarea
-    weight: 12
-    region: content
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-  field_download_policy_file_label:
+  field_display_title:
     type: string_textfield
-    weight: 14
+    weight: 9
     region: content
     settings:
       size: 60
       placeholder: ''
-    third_party_settings: {  }
-  field_download_policy_file_pdf_m:
-    type: file_generic
-    weight: 13
-    region: content
-    settings:
-      progress_indicator: throbber
     third_party_settings: {  }
   field_download_policy_label:
     type: string_textfield
@@ -76,9 +38,27 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_downloadpolicy_component:
+    type: paragraphs
+    weight: 10
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
   field_policies_registration_webf:
     type: webform_entity_reference_select
-    weight: 10
+    weight: 11
     region: content
     settings:
       default_data: true
