--- a/config/apextoolgroup/default/core.entity_view_display.node.policies_registration.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.policies_registration.default.yml
@@ -3,15 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.policies_registration.field_download_policy_desc
-    - field.field.node.policies_registration.field_download_policy_file_label
-    - field.field.node.policies_registration.field_download_policy_file_pdf_m
-    - field.field.node.policies_registration.field_download_policy_label
+    - field.field.node.policies_registration.field_display_title
+    - field.field.node.policies_registration.field_downloadpolicy_component
     - field.field.node.policies_registration.field_policies_registration_webf
     - node.type.policies_registration
   module:
-    - file
-    - text
+    - entity_reference_revisions
     - user
     - webform
 id: node.policies_registration.default
@@ -19,28 +16,13 @@ targetEntityType: node
 bundle: policies_registration
 mode: default
 content:
-  field_download_policy_desc:
-    type: text_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 103
-    region: content
-  field_download_policy_file_label:
+  field_display_title:
     type: string
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 105
-    region: content
-  field_download_policy_file_pdf_m:
-    type: file_default
-    label: above
-    settings:
-      use_description_as_link_text: true
-    third_party_settings: {  }
-    weight: 104
+    weight: 1
     region: content
   field_download_policy_label:
     type: string
@@ -50,18 +32,27 @@ content:
     third_party_settings: {  }
     weight: 102
     region: content
+  field_downloadpolicy_component:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 2
+    region: content
   field_policies_registration_webf:
     type: webform_entity_reference_entity_view
-    label: above
+    label: hidden
     settings:
       source_entity: true
     third_party_settings: {  }
-    weight: 101
+    weight: 3
     region: content
   links:
     settings: {  }
     third_party_settings: {  }
-    weight: 100
+    weight: 0
     region: content
 hidden:
   langcode: true
