Apex-459: Remove merchandise button from footer section and remove callout section from download page.

--- a/config/apex-tools/default/block.block.catalogslinkeuropeen.yml
+++ b/config/apex-tools/default/block.block.catalogslinkeuropeen.yml
@@ -1,6 +1,6 @@
 uuid: 0a70bc68-c81b-4d82-8328-0029065a082b
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - fixed_block_content.fixed_block_content.catalogs_link_europe_en
