--- a/config/apex-tools/default/block.block.catalogslinknorthamericaen.yml
+++ b/config/apex-tools/default/block.block.catalogslinknorthamericaen.yml
@@ -1,6 +1,6 @@
 uuid: 988958d4-e9d6-4fdc-a19f-e0e99d04057c
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - fixed_block_content.fixed_block_content.catalogs_link_north_america_en
