--- a/config/apex-tools/default/block.block.catalogslinkeuropede.yml
+++ b/config/apex-tools/default/block.block.catalogslinkeuropede.yml
@@ -1,6 +1,6 @@
 uuid: 48e2d3c7-503e-44b0-bb7b-a20e6b404e68
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - fixed_block_content.fixed_block_content.catalogs_link_europe_de
