APS-127: thank you page added.

--- a/config/apextoolgroup/default/webform.webform.policies_registration_webform.yml
+++ b/config/apextoolgroup/default/webform.webform.policies_registration_webform.yml
@@ -113,7 +113,7 @@ settings:
   ajax_speed: null
   page: true
   page_submit_path: ''
-  page_confirm_path: ''
+  page_confirm_path: /thank-you-page
   page_theme_name: ''
   form_title: both
   form_submit_once: false
