--- a/config/apex-tools/local/core.extension.yml
+++ b/config/apex-tools/local/core.extension.yml
@@ -5,13 +5,11 @@ module:
   acquia_purge: 0
   acquia_search: 0
   address: 0
-  addtothis_apex_tool: 0
   admin_toolbar: 0
   advagg: 0
   advagg_css_minify: 0
   advagg_js_minify: 0
   apex_migrations: 0
-  apex_tools_custom_quotation: 0
   at_migrations: 0
   atg_api: 0
   atg_callout: 0
@@ -51,8 +49,8 @@ module:
   ctools_block: 0
   datetime: 0
   dblog: 0
-  devel: 0
-  devel_generate: 0
+  default_paragraphs: 0
+  double_field: 0
   drupalmoduleupgrader: 0
   dynamic_entity_reference: 0
   dynamic_page_cache: 0
@@ -68,7 +66,6 @@ module:
   feeds: 0
   feeds_tamper: 0
   field: 0
-  field_group: 0
   field_ui: 0
   file: 0
   file_mdm: 0
@@ -101,6 +98,7 @@ module:
   link: 0
   locale: 0
   mailsystem: 0
+  markup: 0
   media: 0
   media_entity_browser_media_library: 0
   media_library: 0
@@ -119,9 +117,12 @@ module:
   password_policy_length: 0
   path: 0
   path_alias: 0
+  path_redirect_import: 0
   pdfpreview: 0
+  physical: 0
   purge: 0
   purge_queuer_coretags: 0
+  purge_ui: 0
   quick_node_clone: 0
   quickedit: 0
   rabbit_hole: 0
@@ -136,11 +137,11 @@ module:
   search_api: 0
   search_api_db: 0
   search_api_solr: 0
+  select_or_other: 0
   serialization: 0
   sfweb2lead_webform: 0
   shield: 0
   shortcut: 0
-  simple_multistep: 0
   sophron: 0
   stage_file_proxy: 0
   swiftmailer: 0
@@ -153,6 +154,7 @@ module:
   toolbar: 0
   tour: 0
   tracker: 0
+  triples_field: 0
   twig_tweak: 0
   update: 0
   upgrade_status: 0
@@ -170,11 +172,13 @@ module:
   password_policy: 10
   views: 10
   paragraphs: 11
+  field_group: 85
+  simple_multistep: 86
+  apex_tools_custom_quotation: 87
   standard: 1000
 theme:
   bartik: 0
   seven: 0
   atg: 0
-  cleco: 0
   apex_tools: 0
 profile: standard
